--- a/src/style.css
+++ b/src/style.css
@@ -807,6 +807,10 @@ video {
   overflow: hidden;
 }
 
+.scroll-smooth {
+  scroll-behavior: smooth;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -1365,5 +1369,9 @@ video {
 
   .xs\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .xs\:self-center {
+    align-self: center;
   }
 }
